--- a/forty-jekyll-theme-master/_config.yml
+++ b/forty-jekyll-theme-master/_config.yml
@@ -1,8 +1,8 @@
 # site settings
-title: Forty
+title: Back Matter 
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: Back Matter is a print and digital magazine produced by graduate students in the Creative Publishing and Critical Journalism program at The New School for Social Research. By examining  New York City's publishing industry and asking how work is produced and by whom, we hope to better understand how media drives, reflects, and follows culture. Accelerating developments in technology force us to ask: what will publishing be and what is it now?
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
